# Materos-Anonimos

./: NEW  README.c  README.md  promedioconfunciones(void).c  struc.c  subir a rama.c
BackEnd Horoscopo (Proyecto Materos)/: CMakeLists.txt  Makefile  main.cpp
BackEnd Horoscopo (Proyecto Materos)/swisseph_src/: swejpl.c
biblioteca/: biblioteca_martin_el_puto_tesoreria_nacional.txt  biblioteca_martopro_marot_es_una_bestia_en_la_cama.txt  biblioteca_martopro_marto.txt  biblioteca_targaryen_juani_mendoza.txt  biblioteca_yayiskia_marto_se_coge_al_gordo.txt
